fix margin and spacing

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1060,8 +1060,8 @@ a {
   color: #00b7c4;
 }
 .cid-sIsqmVqapn {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+  /* padding-top: 6rem; */
+  /* padding-bottom: 6rem; */
   background-color: #fafafa;
 }
 .cid-sIsqmVqapn img,
